frontend-sach/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-sach
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-sach
  template:
    metadata:
      labels:
        app: frontend-sach
    spec:
      containers:
        - name: frontend-sach
          image: hoangnghiathai01/frontend-sach-2:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
