frontend-sach/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-sach-service
spec:
  selector:
    app: frontend-sach
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
